icon and image update

--- a/src/about.html
+++ b/src/about.html
@@ -22,8 +22,7 @@
                         </div>
                         <div class="top-nav--items">
                             <ul>
-                                <li class="tp-login"><a href="#">Customer Login</a></li>
-                                <li class="tp-login"><a href="#">Agent Login</a></li>
+                              <li class="tp-login"><a href="./login.html">Login/SignUp</a></li>
                             </ul>
                         </div>
                     </div>
@@ -37,10 +36,6 @@
                         <a href="./" class="site-logo">
                             <img src="./images/qpick-logo.png" alt="Site logo">
                         </a>
-                        <form>
-                            <input type="text" id="tags" placeholder="Search a product or categories...">
-                        </form>
-
                         <ul>
                           <li><a href="./">Home</a></li>
                           <li><a href="./about.html">About</a></li>
@@ -63,161 +58,137 @@
         <!-- /NAV -->
 
         <div class="service">
-            <div class="site-container">
-              <div class="service-main">
-                <ul>
-                  <li>
-                    <a href="#">
-                      <img src="./images/mobile.png" alt="">
-                      <span>Prepaid/Postpaid</span>
-                    </a>
-                  </li>
-                  <li>
-                    <a href="#">
-                      <img src="./images/antena.png" alt="">
-                      <span>DTH</span>
-                    </a>
-                  </li>
-                  <li>
-                    <a href="#">
-                      <img src="./images/bulb.png" alt="">
-                      <span>Electricity</span>
-                    </a>
-                  </li>
-                  <li>
-                    <a href="#">
-                      <img src="./images/money.png" alt="">
-                      <span>Money Transfer</span>
-                    </a>
-                  </li>
-                  <li>
-                    <a href="#">
-                      <img src="./images/i-card.png" alt="">
-                      <span>Adhar</span>
-                    </a>
-                  </li>
-                  <li>
-                    <a href="#">
-                      <img src="./images/spoon.png" alt="">
-                      <span>Food Licence</span>
-                    </a>
-                  </li>
-                  <li>
-                    <a href="#">
-                      <img src="./images/insurance.png" alt="">
-                      <span>Insurance</span>
-                    </a>
-                  </li>
-                  <li>
-                    <a href="#">
-                      <img src="./images/books.png" alt="">
-                      <span>Education</span>
-                    </a>
-                  </li>
-                  <li>
-                    <a href="#">
-                      <img src="./images/home.png" alt="">
-                      <span>Shop Licence</span>
-                    </a>
-                  </li>
-                  <li>
-                    <a href="#">
-                      <img src="./images/broadband.png" alt="">
-                      <span>Broadband/Landline</span>
-                    </a>
-                  </li>
-                  <li>
-                    <a href="#">
-                      <img src="./images/train.png" alt="Railway ticket">
-                      <span>Railway ticket</span>
-                    </a>
-                  </li>
-                  <li class="service_menu">
-                    <a href="#" class="toggle-btn">
-                      <img src="./images/toggle.png" alt="toggle icon">
-                    </a>
-                    <div class="service_menu__inner">
-                      <div>
-                        <div class="row">
-                          <div class="col-md-3">
-                            <ul>
-                              <li><a href="#">Links</a></li>
-                              <li><a href="#">Links</a></li>
-                              <li><a href="#">Links</a></li>
-                              <li><a href="#">Links</a></li>
-                              <li><a href="#">Links</a></li>
-                            </ul>
-                          </div>
-                          <div class="col-md-3">
-                            <ul>
-                              <li><a href="#">Links</a></li>
-                              <li><a href="#">Links</a></li>
-                              <li><a href="#">Links</a></li>
-                              <li><a href="#">Links</a></li>
-                              <li><a href="#">Links</a></li>
-                            </ul>
-                          </div>
-                          <div class="col-md-3">
-                            <ul>
-                              <li><a href="#">Links</a></li>
-                              <li><a href="#">Links</a></li>
-                              <li><a href="#">Links</a></li>
-                              <li><a href="#">Links</a></li>
-                              <li><a href="#">Links</a></li>
-                            </ul>
-                          </div>
-                          <div class="col-md-3">
-                            <ul>
-                              <li><a href="#">Links</a></li>
-                              <li><a href="#">Links</a></li>
-                              <li><a href="#">Links</a></li>
-                              <li><a href="#">Links</a></li>
-                              <li><a href="#">Links</a></li>
-                            </ul>
-                          </div>
-                          <div class="col-md-3">
-                            <ul>
-                              <li><a href="#">Links</a></li>
-                              <li><a href="#">Links</a></li>
-                              <li><a href="#">Links</a></li>
-                              <li><a href="#">Links</a></li>
-                              <li><a href="#">Links</a></li>
-                            </ul>
-                          </div>
-                          <div class="col-md-3">
-                            <ul>
-                              <li><a href="#">Links</a></li>
-                              <li><a href="#">Links</a></li>
-                              <li><a href="#">Links</a></li>
-                              <li><a href="#">Links</a></li>
-                              <li><a href="#">Links</a></li>
-                            </ul>
-                          </div>
-                          <div class="col-md-3">
-                            <ul>
-                              <li><a href="#">Links</a></li>
-                              <li><a href="#">Links</a></li>
-                              <li><a href="#">Links</a></li>
-                              <li><a href="#">Links</a></li>
-                              <li><a href="#">Links</a></li>
-                            </ul>
-                          </div>
-                          <div class="col-md-3">
-                            <ul>
-                              <li><a href="#">Links</a></li>
-                              <li><a href="#">Links</a></li>
-                              <li><a href="#">Links</a></li>
-                              <li><a href="#">Links</a></li>
-                              <li><a href="#">Links</a></li>
-                            </ul>
-                          </div>
+          <div class="site-container">
+            <div class="service-main">
+              <ul>
+                <li>
+                  <a href="#">
+                    <img src="./images/busines-reg.png" alt="">
+                    <span>Business Registration</span>
+                  </a>
+                </li>
+                <li>
+                  <a href="#">
+                    <img src="./images/busines-lic.png" alt="">
+                    <span>Business Licences</span>
+                  </a>
+                </li>
+                <li>
+                  <a href="#">
+                    <img src="./images/busines-comp.png" alt="">
+                    <span>Business Compliances</span>
+                  </a>
+                </li>
+                <li>
+                  <a href="#">
+                    <img src="./images/insurance.png" alt="">
+                    <span>Insurance</span>
+                  </a>
+                </li>
+                <li>
+                  <a href="#">
+                    <img src="./images/sell-pur.png" alt="">
+                    <span>Sell/Purchase Of Company</span>
+                  </a>
+                </li>
+                <li>
+                  <a href="#">
+                    <img src="./images/consultancy.png" alt="">
+                    <span>Startup Consultancy</span>
+                  </a>
+                </li>
+                <li>
+                  <a href="#">
+                    <img src="./images/bill-payment.png" alt="">
+                    <span>Recharge & Bill Payment</span>
+                  </a>
+                </li>
+                <li class="service_menu">
+                  <a href="#" class="toggle-btn">
+                    <img src="./images/toggle.png" alt="toggle icon">
+                  </a>
+                  <div class="service_menu__inner">
+                    <div>
+                      <div class="row">
+                        <div class="col-md-3">
+                          <ul>
+                            <li><a href="#">Links</a></li>
+                            <li><a href="#">Links</a></li>
+                            <li><a href="#">Links</a></li>
+                            <li><a href="#">Links</a></li>
+                            <li><a href="#">Links</a></li>
+                          </ul>
+                        </div>
+                        <div class="col-md-3">
+                          <ul>
+                            <li><a href="#">Links</a></li>
+                            <li><a href="#">Links</a></li>
+                            <li><a href="#">Links</a></li>
+                            <li><a href="#">Links</a></li>
+                            <li><a href="#">Links</a></li>
+                          </ul>
+                        </div>
+                        <div class="col-md-3">
+                          <ul>
+                            <li><a href="#">Links</a></li>
+                            <li><a href="#">Links</a></li>
+                            <li><a href="#">Links</a></li>
+                            <li><a href="#">Links</a></li>
+                            <li><a href="#">Links</a></li>
+                          </ul>
+                        </div>
+                        <div class="col-md-3">
+                          <ul>
+                            <li><a href="#">Links</a></li>
+                            <li><a href="#">Links</a></li>
+                            <li><a href="#">Links</a></li>
+                            <li><a href="#">Links</a></li>
+                            <li><a href="#">Links</a></li>
+                          </ul>
+                        </div>
+                        <div class="col-md-3">
+                          <ul>
+                            <li><a href="#">Links</a></li>
+                            <li><a href="#">Links</a></li>
+                            <li><a href="#">Links</a></li>
+                            <li><a href="#">Links</a></li>
+                            <li><a href="#">Links</a></li>
+                          </ul>
+                        </div>
+                        <div class="col-md-3">
+                          <ul>
+                            <li><a href="#">Links</a></li>
+                            <li><a href="#">Links</a></li>
+                            <li><a href="#">Links</a></li>
+                            <li><a href="#">Links</a></li>
+                            <li><a href="#">Links</a></li>
+                          </ul>
+                        </div>
+                        <div class="col-md-3">
+                          <ul>
+                            <li><a href="#">Links</a></li>
+                            <li><a href="#">Links</a></li>
+                            <li><a href="#">Links</a></li>
+                            <li><a href="#">Links</a></li>
+                            <li><a href="#">Links</a></li>
+                          </ul>
+                        </div>
+                        <div class="col-md-3">
+                          <ul>
+                            <li><a href="#">Links</a></li>
+                            <li><a href="#">Links</a></li>
+                            <li><a href="#">Links</a></li>
+                            <li><a href="#">Links</a></li>
+                            <li><a href="#">Links</a></li>
+                          </ul>
                         </div>
                       </div>
                     </div>
-                  </li>
-                </ul>
-              </div>
+                  </div> 
+                </li>
+              </ul>
             </div>
+          </div>
         </div>
         <!-- /services nav -->
 
@@ -235,7 +206,7 @@
                         <div class="col-lg-7">
                             <div class="about_us--text">
                                 <article>
-                                    <h1>Abous Us</h1>
+                                    <h1>About Us</h1>
                                     <h2>Qpickservices is an Indian leader in next-generation digital</h2>
                                     <p>
                                         Qpickservices is an Indian leader in next-generation digital Financial services and consulting. We enable clients across India to navigate their digital transformation and begin with their Digital Business Journey
