--- a/src/contact.html
+++ b/src/contact.html
@@ -22,8 +22,7 @@
                         </div>
                         <div class="top-nav--items">
                             <ul>
-                                <li class="tp-login"><a href="#">Customer Login</a></li>
-                                <li class="tp-login"><a href="#">Agent Login</a></li>
+                                <li class="tp-login"><a href="./login.html">Login/SignUp</a></li>
                             </ul>
                         </div>
                     </div>
@@ -38,10 +37,6 @@
                             <a href="./" class="site-logo">
                                 <img src="./images/qpick-logo.png" alt="Site logo">
                             </a>
-                            <form>
-                                <input type="text" id="tags" placeholder="Search a product or categories...">
-                            </form>
-
                             <ul>
                                 <li><a href="./">Home</a></li>
                                 <li><a href="./about.html">About</a></li>
@@ -49,7 +44,6 @@
                                 <li><a href="./contact.html">Contact</a></li>
                                 <li><a href="#">Blog</a></li>
                             </ul>
-
                             <div class="mobile--toggle hamburger hamburger--slider-r">
                                 <span class="hamburger-box">
                                     <span class="hamburger-inner"></span>
@@ -69,38 +63,20 @@
                     <ul>
                         <li>
                             <a href="#">
-                                <img src="./images/mobile.png" alt="">
-                                <span>Prepaid/Postpaid</span>
+                                <img src="./images/busines-reg.png" alt="">
+                                <span>Business Registration</span>
                             </a>
                         </li>
                         <li>
                             <a href="#">
-                                <img src="./images/antena.png" alt="">
-                                <span>DTH</span>
+                                <img src="./images/busines-lic.png" alt="">
+                                <span>Business Licences</span>
                             </a>
                         </li>
                         <li>
                             <a href="#">
-                                <img src="./images/bulb.png" alt="">
-                                <span>Electricity</span>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                <img src="./images/money.png" alt="">
-                                <span>Money Transfer</span>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                <img src="./images/i-card.png" alt="">
-                                <span>Adhar</span>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                <img src="./images/spoon.png" alt="">
-                                <span>Food Licence</span>
+                                <img src="./images/busines-comp.png" alt="">
+                                <span>Business Compliances</span>
                             </a>
                         </li>
                         <li>
@@ -111,26 +87,20 @@
                         </li>
                         <li>
                             <a href="#">
-                                <img src="./images/books.png" alt="">
-                                <span>Education</span>
+                                <img src="./images/sell-pur.png" alt="">
+                                <span>Sell/Purchase Of Company</span>
                             </a>
                         </li>
                         <li>
                             <a href="#">
-                                <img src="./images/home.png" alt="">
-                                <span>Shop Licence</span>
+                                <img src="./images/consultancy.png" alt="">
+                                <span>Startup Consultancy</span>
                             </a>
                         </li>
                         <li>
                             <a href="#">
-                                <img src="./images/broadband.png" alt="">
-                                <span>Broadband/Landline</span>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                <img src="./images/train.png" alt="Railway ticket">
-                                <span>Railway ticket</span>
+                                <img src="./images/bill-payment.png" alt="">
+                                <span>Recharge & Bill Payment</span>
                             </a>
                         </li>
                         <li class="service_menu">
@@ -223,7 +193,7 @@
         <!-- /SERVICE NAV -->
 
         <section id="about-header">
-            <div class="about-us__heading">
+            <div class="about-us__heading contact-us__heading">
                 <h1>Contact Us</h1>
             </div>
         </section>
