--- a/src/index.html
+++ b/src/index.html
@@ -24,8 +24,7 @@
             </div>
             <div class="top-nav--items">
               <ul>
-                <li class="tp-login"><a href="#">Customer Login</a></li>
-                <li class="tp-login"><a href="#">Agent Login</a></li>
+                <li class="tp-login"><a href="./login.html">Login/SignUp</a></li>
               </ul>
             </div>
           </div>
@@ -36,13 +35,9 @@
         <div class="botton-nav">
           <div class="site-container">
             <nav>
-              <a href="#" class="site-logo">
+              <a href="./" class="site-logo">
                 <img src="./images/qpick-logo.png" alt="Site logo">
               </a>
-              <form>
-                <input type="text" id="tags" placeholder="Search a product or categories...">
-              </form>
-              
               <ul>
                 <li><a href="./">Home</a></li>
                 <li><a href="./about.html">About</a></li>
@@ -50,7 +45,6 @@
                 <li><a href="./contact.html">Contact</a></li>
                 <li><a href="#blog">Blog</a></li>
               </ul>
-              
               <div class="mobile--toggle hamburger hamburger--slider-r">
                 <span class="hamburger-box">
                   <span class="hamburger-inner"></span>
@@ -70,38 +64,20 @@
           <ul>
             <li>
               <a href="#">
-                <img src="./images/mobile.png" alt="">
-                <span>Prepaid/Postpaid</span>
+                <img src="./images/busines-reg.png" alt="">
+                <span>Business Registration</span>
               </a>
             </li>
             <li>
               <a href="#">
-                <img src="./images/antena.png" alt="">
-                <span>DTH</span>
+                <img src="./images/busines-lic.png" alt="">
+                <span>Business Licences</span>
               </a>
             </li>
             <li>
               <a href="#">
-                <img src="./images/bulb.png" alt="">
-                <span>Electricity</span>
-              </a>
-            </li>
-            <li>
-              <a href="#">
-                <img src="./images/money.png" alt="">
-                <span>Money Transfer</span>
-              </a>
-            </li>
-            <li>
-              <a href="#">
-                <img src="./images/i-card.png" alt="">
-                <span>Adhar</span>
-              </a>
-            </li>
-            <li>
-              <a href="#">
-                <img src="./images/spoon.png" alt="">
-                <span>Food Licence</span>
+                <img src="./images/busines-comp.png" alt="">
+                <span>Business Compliances</span>
               </a>
             </li>
             <li>
@@ -112,26 +88,20 @@
             </li>
             <li>
               <a href="#">
-                <img src="./images/books.png" alt="">
-                <span>Education</span>
+                <img src="./images/sell-pur.png" alt="">
+                <span>Sell/Purchase Of Company</span>
               </a>
             </li>
             <li>
               <a href="#">
-                <img src="./images/home.png" alt="">
-                <span>Shop Licence</span>
+                <img src="./images/consultancy.png" alt="">
+                <span>Startup Consultancy</span>
               </a>
             </li>
             <li>
               <a href="#">
-                <img src="./images/broadband.png" alt="">
-                <span>Broadband/Landline</span>
-              </a>
-            </li>
-            <li>
-              <a href="#">
-                <img src="./images/train.png" alt="Railway ticket">
-                <span>Railway ticket</span>
+                <img src="./images/bill-payment.png" alt="">
+                <span>Recharge & Bill Payment</span>
               </a>
             </li>
             <li class="service_menu">
@@ -335,144 +305,241 @@
               <div class="col-6 col-md-3 col-xl-2">
                 <div class="services-item">
                  <a href="#">
-                  <img src="./images/mobile-recharge.png" alt="mobile recharge">
-                  <h4>Mobile Recharge</h4>
+                  <img src="./images/nidhi-reg.svg" alt="Nidhi Company Registration">
+                  <h4>Nidhi Company Registration</h4>
                  </a>
                 </div>
               </div>
               <div class="col-6 col-md-3 col-xl-2">
                 <div class="services-item">
                   <a href="#">
-                    <img src="./images/withdraw-money.png" alt="Withdraw Money">
-                    <h4>Adhar se paise nikalen</h4>
+                    <img src="./images/producer-comp.svg" alt="Producer Company Registration">
+                    <h4>Producer Company Registration</h4>
                   </a>
                 </div>
               </div>
               <div class="col-6 col-md-3 col-xl-2">
                 <div class="services-item">
                   <a href="#">
-                    <img src="./images/corporation.png" alt="Company/Shop Registration">
-                    <h4>Company/Shop Registration</h4>
+                    <img src="./images/comp-reg.svg" alt="Private Limited Company Registration">
+                    <h4>Private Limited Company Registration</h4>
                   </a>
                 </div>
               </div>
               <div class="col-6 col-md-3 col-xl-2">
                 <div class="services-item">
                  <a href="#">
-                  <img src="./images/money-transfer.png" alt="Money Transfer">
-                  <h4>Money Transfer</h4>
+                  <img src="./images/public-ltd-comp.svg" alt="Public Limited Company Registration">
+                  <h4>Public Limited Company Registration</h4>
                  </a>
                 </div>
               </div>
               <div class="col-6 col-md-3 col-xl-2">
                 <div class="services-item">
                   <a href="#">
-                    <img src="./images/vehicle-reg.png" alt="Vehicle Regstration">
-                    <h4>Vehicle Registration</h4>
+                    <img src="./images/trust-reg.svg" alt="Trust Registration">
+                    <h4>Trust Registration</h4>
                   </a>
                 </div>
               </div>
               <div class="col-6 col-md-3 col-xl-2">
                 <div class="services-item">
                  <a href="#">
-                  <img src="./images/adhar-card.png" alt="Adhar Card">
-                  <h4>Addhar Card</h4>
+                  <img src="./images/socity-reg.svg" alt="Society Registration">
+                  <h4>Society Registration</h4>
                  </a>
                 </div>
               </div>
               <div class="col-6 col-md-3 col-xl-2">
                 <div class="services-item">
                   <a href="#">
-                    <img src="./images/office-building.png" alt="Firm Registration">
-                    <h4>Firm Registration</h4>
+                    <img src="./images/section-8.svg" alt="Section 8 Company Registration">
+                    <h4>Section 8 Company Registration</h4>
                   </a>
                 </div>
               </div>
               <div class="col-6 col-md-3 col-xl-2">
                 <div class="services-item">
                   <a href="#">
-                    <img src="./images/tax.png" alt="GST Return">
-                    <h4>GST Return</h4>
+                    <img src="./images/ngo-reg.svg" alt="NGO Registration">
+                    <h4>NGO Registration</h4>
                   </a>
                 </div>
               </div>
               <div class="col-6 col-md-3 col-xl-2">
                 <div class="services-item">
                 <a href="#">
-                  <img src="./images/itr-filling.png" alt="ITR Filling">
-                  <h4>ITR Filling</h4>
+                  <img src="./images/partner-reg.svg" alt="Partnership Registration">
+                  <h4>Partnership Registration</h4>
                 </a>
                 </div>
               </div>
               <div class="col-6 col-md-3 col-xl-2">
                 <div class="services-item">
                  <a href="#">
-                  <img src="./images/bharat-bill.png" alt="Bharat Bill">
-                  <h4>Bharat Bill</h4>
+                  <img src="./images/propreatership-reg.svg" alt="Proprietorship Registration">
+                  <h4>Proprietorship Registration</h4>
                  </a>
                 </div>
               </div>
               <div class="col-6 col-md-3 col-xl-2">
                 <div class="services-item">
                   <a href="#">
-                    <img src="./images/rera-registration.png" alt="Rera Registration">
+                    <img src="./images/iso-certificate.svg" alt="ISO Registration">
+                    <h4>ISO Registration</h4>
+                  </a>
+                </div>
+              </div>
+              <div class="col-6 col-md-3 col-xl-2">
+                <div class="services-item">
+                  <a href="#">
+                    <img src="./images/shop.svg" alt="State Shop & Establishment Registration">
+                    <h4>State Shop & Establishment Registration</h4>
+                  </a>
+                </div>
+              </div>
+              <div class="col-6 col-md-3 col-xl-2">
+                <div class="services-item">
+                  <a href="#">
+                    <img src="./images/pasara.svg" alt="Psara Registration">
+                    <h4>Psara Registration</h4>
+                  </a>
+                </div>
+              </div>
+              <div class="col-6 col-md-3 col-xl-2">
+                <div class="services-item">
+                 <a href="#">
+                  <img src="./images/epf-reg.svg" alt="EPF Registration">
+                  <h4>EPF Registration</h4>
+                 </a>
+                </div>
+              </div>
+              <div class="col-6 col-md-3 col-xl-2">
+                <div class="services-item">
+                  <a href="#">
+                    <img src="./images/esi-reg.svg" alt="ESI Registration">
+                    <h4>ESI Registration</h4>
+                  </a>
+                </div>
+              </div>
+              <div class="col-6 col-md-3 col-xl-2">
+                <div class="services-item">
+                 <a href="#">
+                  <img src="./images/rera-reg.svg" alt="Rera Registration">
                   <h4>Rera Registration</h4>
-                  </a>
-                </div>
-              </div>
-              <div class="col-6 col-md-3 col-xl-2">
-                <div class="services-item">
-                  <a href="#">
-                    <img src="./images/fast-food.png" alt="Fast Food">
-                    <h4>Food Licence</h4>
-                  </a>
-                </div>
-              </div>
-              <div class="col-6 col-md-3 col-xl-2">
-                <div class="services-item">
-                  <a href="#">
-                    <img src="./images/electricity-bill.png" alt="electricity-bill">
-                    <h4>Electricity Bill</h4>
-                  </a>
-                </div>
-              </div>
-              <div class="col-6 col-md-3 col-xl-2">
-                <div class="services-item">
-                 <a href="#">
-                  <img src="./images/gtm-portal.png" alt="Gtm portal Registration">
-                  <h4>GTM Portal Registration</h4>
                  </a>
                 </div>
               </div>
               <div class="col-6 col-md-3 col-xl-2">
                 <div class="services-item">
                   <a href="#">
-                    <img src="./images/driving-license.png" alt="driving-license">
-                    <h4>Rsan Card</h4>
+                    <img src="./images/fssai-reg.svg" alt="Fssai Registration">
+                    <h4>Fssai Registration</h4>
                   </a>
                 </div>
               </div>
-              <div class="col-6 col-md-3 col-xl-2">
-                <div class="services-item">
-                 <a href="#">
-                  <img src="./images/train-ticket.png" alt="IRCTC Ticket">
-                  <h4>IRCTC Ticket</h4>
-                 </a>
-                </div>
-              </div>
+
               <div class="col-6 col-md-3 col-xl-2">
                 <div class="services-item">
                   <a href="#">
-                    <img src="./images/registration.png" alt="registration">
-                    <h4>Online Education</h4>
+                    <img src="./images/gem-portal.svg" alt="Insurance">
+                    <h4>GEM Portal Registration</h4>
                   </a>
                 </div>
               </div>
               <div class="col-6 col-md-3 col-xl-2">
                 <div class="services-item">
                   <a href="#">
-                    <img src="./images/life-insurance.png" alt="Insurance">
-                    <h4>Insurance</h4>
+                    <img src="./images/tender.svg" alt="State Tender Registration">
+                    <h4>State Tender Registration</h4>
+                  </a>
+                </div>
+              </div>
+              <div class="col-6 col-md-3 col-xl-2">
+                <div class="services-item">
+                  <a href="#">
+                    <img src="./images/ele-sign.svg" alt="Digital Sigtature">
+                    <h4>Digital Sigtature</h4>
+                  </a>
+                </div>
+              </div>
+              <div class="col-6 col-md-3 col-xl-2">
+                <div class="services-item">
+                  <a href="#">
+                    <img src="./images/gst-reg.svg" alt="GST Registration">
+                    <h4>GST Registration</h4>
+                  </a>
+                </div>
+              </div>
+              <div class="col-6 col-md-3 col-xl-2">
+                <div class="services-item">
+                  <a href="#">
+                    <img src="./images/udyog-reg.svg" alt="Udyam Aadhar Registration">
+                    <h4>Udyam Aadhar Registration</h4>
+                  </a>
+                </div>
+              </div>
+              <div class="col-6 col-md-3 col-xl-2">
+                <div class="services-item">
+                  <a href="#">
+                    <img src="./images/itr-filling.svg" alt="ITR Filing">
+                    <h4>ITR Filing</h4>
+                  </a>
+                </div>
+              </div>
+              <div class="col-6 col-md-3 col-xl-2">
+                <div class="services-item">
+                  <a href="#">
+                    <img src="./images/gst-return.svg" alt="GST Return">
+                    <h4>GST Return</h4>
+                  </a>
+                </div>
+              </div>
+              <div class="col-6 col-md-3 col-xl-2">
+                <div class="services-item">
+                  <a href="#">
+                    <img src="./images/life-insurance.png" alt="ROC Return">
+                    <h4>ROC Return</h4>
+                  </a>
+                </div>
+              </div>
+              <div class="col-6 col-md-3 col-xl-2">
+                <div class="services-item">
+                  <a href="#">
+                    <img src="./images/life-insurance.png" alt="EPF Return">
+                    <h4>EPF Return</h4>
+                  </a>
+                </div>
+              </div>
+              <div class="col-6 col-md-3 col-xl-2">
+                <div class="services-item">
+                  <a href="#">
+                    <img src="./images/life-insurance.png" alt="ESI Return">
+                    <h4>ESI Return</h4>
+                  </a>
+                </div>
+              </div>
+              <div class="col-6 col-md-3 col-xl-2">
+                <div class="services-item">
+                  <a href="#">
+                    <img src="./images/tds-return.svg" alt="TDS Return">
+                    <h4>TDS Return</h4>
+                  </a>
+                </div>
+              </div>
+              <div class="col-6 col-md-3 col-xl-2">
+                <div class="services-item">
+                  <a href="#">
+                    <img src="./images/life-insurance.png" alt="Rera Return">
+                    <h4>Rera Return</h4>
+                  </a>
+                </div>
+              </div>
+              <div class="col-6 col-md-3 col-xl-2">
+                <div class="services-item">
+                  <a href="#">
+                    <img src="./images/trademark.svg" alt="Trademark Registration">
+                    <h4>Trademark Registration</h4>
                   </a>
                 </div>
               </div>
@@ -481,7 +548,7 @@
         </div>
       </div>
     </section>
-    <!-- /SERVICES -->
+    <!-- /SERVICES[QUICK LINKS] -->
 
     <section id="gallery">
       <div class="site-container">
@@ -749,7 +816,21 @@
               </div>
               <div class="swiper-slide">
                 <div class="testimonial-cards">
-                  <img src="./images/testimonials.png" alt="Clients images">
+                  <img src="./images/testimonials1.png" alt="Clients images">
+                  <article>
+                    <span class="quotes-image"></span>
+                    <h3>Rupesh Kumar</h3>
+                    <span>CEO. Amity Foundation,</span>
+                    <p>
+                      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sapiente qui quos 
+                      esse omnis illo? Accusantium dolorum accusamus dolorem, doloribus fugiat.
+                    </p>
+                  </article>
+                </div>
+              </div>
+              <div class="swiper-slide">
+                <div class="testimonial-cards">
+                  <img src="./images/testimonials2.png" alt="Clients images">
                   <article>
                     <span class="quotes-image"></span>
                     <h3>Rupesh Kumar</h3>
@@ -777,21 +858,7 @@
               </div>
               <div class="swiper-slide">
                 <div class="testimonial-cards">
-                  <img src="./images/testimonials.png" alt="Clients images">
-                  <article>
-                    <span class="quotes-image"></span>
-                    <h3>Rupesh Kumar</h3>
-                    <span>CEO. Amity Foundation,</span>
-                    <p>
-                      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sapiente qui quos 
-                      esse omnis illo? Accusantium dolorum accusamus dolorem, doloribus fugiat.
-                    </p>
-                  </article>
-                </div>
-              </div>
-              <div class="swiper-slide">
-                <div class="testimonial-cards">
-                  <img src="./images/testimonials.png" alt="Clients images">
+                  <img src="./images/testimonials1.png" alt="Clients images">
                   <article>
                     <span class="quotes-image"></span>
                     <h3>Rupesh Kumar</h3>
